# ImageSegmentation

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test
include/: cluster.h  image.h
src/: cluster.cpp  image.cpp
