cmake_minimum_required(VERSION 3.9)
set (CMAKE_CXX_STANDARD 11)
project(kmeans)
find_package(OpenCV REQUIRED)
find_package(OpenMP REQUIRED)
include_directories(include)
set(SOURCES src/image.cpp src/cluster.cpp main.cpp)
add_executable(main_exe ${SOURCES})
target_link_libraries(main_exe ${OpenCV_LIBS} ${OpenMP_CXX_FLAGS})
